🔀 chore(index.html): update og:image meta tag to use the correct URL for the app icon

--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <title>CODE - どんな願いも叶えるアプリ</title>
     <meta property="og:title" content="CODE - どんな願いも叶えるアプリ" />
     <meta property="og:description" content="" />
-    <meta property="og:image" content="icon.svg" />
+    <meta
+      property="og:image"
+      content="https://manybugsdev.github.io/codeapp/icon.svg"
+    />
     <style>
       * {
         font-family: sans-serif;
