--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta property="og:description" content="" />
     <meta
       property="og:image"
-      content="https://manybugsdev.github.io/codeapp/icon.svg"
+      content="https://manybugsdev.github.io/codeapp/icon.png"
     />
     <style>
       * {
