🎨 style(index.html): add pointer-events: none to the CSS of the logo image to disable mouse events on the element

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
         width: 100%;
         max-width: 300px;
         aspect-ratio: 1/1;
+        pointer-events: none;
       }
       svg.logo.rotate {
         animation: rotate 3s linear;
