🐛 fix(index.html): change the "もう一度" link to reload the page instead of redirecting to the root URL to improve user experience

--- a/index.html
+++ b/index.html
@@ -220,7 +220,15 @@
                     "ソースコード"
                   )
                 ),
-                h("li", {}, h("a", { href: "/" }, "もう一度"))
+                h(
+                  "li",
+                  {},
+                  h(
+                    "a",
+                    { href: "#", onClick: () => window.location.reload() },
+                    "もう一度"
+                  )
+                )
               )
             )
         );
